--- a/TSI-PI1/style.css
+++ b/TSI-PI1/style.css
@@ -6,9 +6,9 @@ body{
 }
 img{
     width: 100px;
-    height: 150px;
 }
 
+/*
 .slider {
     width: 100%;
     overflow: hidden;
@@ -25,7 +25,7 @@ img{
     flex-shrink: 0;
   }
   
-  /* Estilos para os botões de navegação */
+  
   .slider-nav {
     text-align: center;
   }
@@ -37,4 +37,100 @@ img{
     padding: 10px 15px;
     margin: 10px;
     cursor: pointer;
-  }
+  }*/
+
+  .slider{
+    margin: 0 auto;
+    width: 1980px;
+    height: 400px;
+    overflow: hidden;
+}
+
+.slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+.slides input{
+    display: none;
+}
+
+.slide{
+    width: 25%;
+    position: relative;
+    transition: 2s;
+}
+
+.slide img{
+    width: 1900px;
+}
+
+
+.manual-navigation{
+    position: absolute;
+    width: 1980px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn{
+    border: 2px solid #fff;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+
+.manual-btn:hover{
+    background-color: #fff;
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -25%;
+}
+
+#radio3:checked ~ .first{
+    margin-left: -50%;
+}
+
+.navigation-auto div{
+    border: 2px solid #20a6ff;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.navigation-auto{
+    position: absolute;
+    width: 1980px;
+    margin-top: 360px;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+    background-color: #fff;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+    background-color: #fff;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+    background-color: #fff;
+}
