--- a/TSI-PI1/style.css
+++ b/TSI-PI1/style.css
@@ -1,7 +1,8 @@
 body{
     width: 100%;
     height: 100%;
-    background-image: url('./525110.jpg')
+    background-image: url('./525110.jpg');
+    color: white !important;
     
 }
 img{
